Wed Nov 13 14:29:02 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (clean-unix): Remove getdate.c and kadmin_ct.c.

	* keytab.c (process_keytab): Note that krb5_defkeyname is an
	internal interface.

	* kadmin.c (kadmin_startup): Note that krb5_defkeyname is an
	internal interface.
	
	* kadmin.c, keytab.c: Revert kt_default_name changes.

Tue Nov 12 22:05:26 1996  Tom Yu  <tlyu@mit.edu>

	* keytab.c (process_keytab): Retrieve *keytab_str using
	krb5_kt_default_name() to avoid global variable nastiness.

	* kadmin.c (kadmin_startup): Use krb5_kt_set_default_name to
	change the default keytab name rather than assigning to a library
	global variable.

Thu Nov  7 20:52:39 1996  Tom Yu  <tlyu@mit.edu>

	* configure.in: Remove spurious WITH_CCOPTS and KRB_INCLUDE.

Fri Nov  1 11:52:52 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin.c (kadmin_cpw): fix typo [krb5-admin/139]

Wed Oct 30 17:35:19 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin.M: update ktadd's description [krb5-doc/137]

Fri Oct 18 13:47:01 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin.c (kadmin_addprinc): use a studly temporary password when
 	creating a principal with a random key (no, the security of this
 	operation does not depend on the secrecy of the password)
 	[krb5-admin/115]
 
	* getdate.y: remove military timezones and plain integeres as part
 	of date specifications, to reduce confusion by redundancy
 	[krb5-admin/15]

Wed Oct  9 15:23:51 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin.c (kadmin_addprinc): add "default" policy behavior;
 	delete kadmin_renprinc entirely, since it is no longer supported
 	by the api and there is no ss command for it anyway

	* kadmin.M: document "default" policy behavior.  [krb5-admin/84]

Fri Oct  4 16:37:30 1996  Kevin L Mitchell  <klmitch@mit.edu>

	* kadmin.c (kadmin_renprinc): Changed newcanon to oldcanon in the
		"make sure blah is removed from acls before reusing"
		message

Wed Sep 25 16:22:12 1996  Barry Jaspan  <bjaspan@mit.edu>
