@@ -1,3 +1,9 @@
+Thu Dec  5 19:30:22 1996  Tom Yu  <tlyu@mit.edu>
+
+	* kadmin.M: v5srvtab -> krb5.keytab [PR 279]
+
+	* kadmin.c (DEFAULT_KEYTAB): v5srvtab -> krb5.keytab [PR 278]
+
 Wed Nov 13 14:29:02 1996  Tom Yu  <tlyu@mit.edu>
 
 	* Makefile.in (clean-unix): Remove getdate.c and kadmin_ct.c.
